--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,12 @@
 {
-  "suggest.noselect": true,
-  "snippets.ultisnips.pythonPrompt": false
+    "suggest.noselect": true,
+    "snippets.ultisnips.pythonPrompt": false,
+    
+    "sumneko-lua.locale": "zh-cn",
+    "Lua.telemetry.enable": true,
+    "Lua.hint.enable": false,     
+    "Lua.hint.arrayIndex": "Disable",
+
+    "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/15.0.6/clangd_15.0.6/bin/clangd"
 }
+
