--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,12 +1,18 @@
 {
     "suggest.noselect": true,
     "snippets.ultisnips.pythonPrompt": false,
-    
+
+    "[lua][json]": {
+        "coc.preferences.formatOnSave": false
+    },
+    "[go]": {
+        "coc.preferences.formatOnSave": true
+    },
+
     "sumneko-lua.locale": "zh-cn",
     "Lua.telemetry.enable": true,
-    "Lua.hint.enable": false,     
+    "Lua.hint.enable": false,
     "Lua.hint.arrayIndex": "Disable",
 
     "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/15.0.6/clangd_15.0.6/bin/clangd"
 }
-
