fix error keymap and add lua.snippets config

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,6 +1,8 @@
 {
     "suggest.noselect": true,
     "snippets.ultisnips.pythonPrompt": false,
+    "snippets.userSnippetsDirectory": "~/.config/nvim/snippets",
+    "snippets.textmateSnippetsRoots": ["~/.config/nvim/snippets"],
 
     "[lua][json]": {
         "coc.preferences.formatOnSave": false
