add coc settings and change onedark theme

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,7 @@
 {
     "suggest.noselect": true,
+    "diagnostic.checkCurrentLine": true,
+    "diagnostic.signPriority": 1,
     "snippets.ultisnips.pythonPrompt": false,
     "snippets.userSnippetsDirectory": "~/.config/nvim/snippets",
     "snippets.textmateSnippetsRoots": ["~/.config/nvim/snippets"],
