--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,6 @@
 {
     "suggest.noselect": true,
+    "inlayHint.display": false,
     "diagnostic.checkCurrentLine": true,
     "diagnostic.signPriority": 1,
     "snippets.ultisnips.pythonPrompt": false,
