--- a/.others/.tmux.conf
+++ b/.others/.tmux.conf
@@ -1,11 +1,17 @@
 set -g prefix M-`
 set -g mouse on
 
+# set-option -sg escape-time 10
+set -g escape-time 10
+set -g focus-events on
+
 set -g default-terminal "tmux-256color"
+set -g terminal-overrides ',xterm-256color:RGB'
 
 set -g status on
 set -g status-fg "#a4b1b7"
 set -g status-bg "#3f4451"
+set -g status-position top
 
 set -g window-status-current-style fg=green
 
