--- a/.others/.tmux.conf
+++ b/.others/.tmux.conf
@@ -10,7 +10,7 @@ set -g terminal-overrides ',xterm-256color:RGB'
 
 set -g status on
 set -g status-fg "#a4b1b7"
-set -g status-bg "#3f4451"
+set -g status-bg "#2c323c"
 set -g status-position top
 
 set -g window-status-current-style fg=green
