update some configs and add Makefile to setup .others/*

--- a/.others/.tmux.conf
+++ b/.others/.tmux.conf
@@ -1,7 +1,10 @@
+# prefix <Alt-`>
 set -g prefix M-`
 set -g mouse on
 
-# set-option -sg escape-time 10
+set -g base-index 1
+set -g pane-base-index 1
+
 set -g escape-time 10
 set -g focus-events on
 
