--- a/coc-settings.json
+++ b/coc-settings.json
@@ -23,5 +23,6 @@
 
     "markdownlint.config": {
         "MD013": false
-    }
+    },
+    "markdown-preview-enhanced.imageFolderPath": "/images"
 }
