Nvim: update cpp snippets and clang-format

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -8,7 +8,7 @@
     "snippets.snipmate.enable": false,
     "snippets.userSnippetsDirectory": "~/.config/nvim/snippets",
     "snippets.extends": {
-        "cpp": ["c"]
+        "c": ["cpp"]
     },
     "coc.preferences.formatOnSave": true,
     "[lua][json][cpp]": {
