--- a/others/tmux.conf
+++ b/others/tmux.conf
@@ -12,12 +12,11 @@ set -g default-terminal "tmux-256color"
 set -g terminal-overrides ',xterm-256color:RGB'
 
 set -g status on
-set -g status-fg "#a4b1b7"
-set -g status-bg "#2c323c"
 set -g status-position top
+set -g status-style "none,fg=#a4b1b7"
 
 set -g window-status-current-style fg=green
 
 set -g status-left-length 100
-set -g status-left "%Y/%m/%d %A %H:%M|"
+set -g status-left "%Y-%m-%d %A %H:%M|"
 set -g status-right "Mem:#(free -m | awk '/Mem/{printf \"%.2f%\", 100*$3/$2}') IP:#(ip addr show eth0 | awk '/inet /{printf $2}')"
