Nvim: coc.nvim to nvim-lspconfig

--- a/others/tmux.conf
+++ b/others/tmux.conf
@@ -1,6 +1,6 @@
 # prefix <Alt-`>
 set -g prefix M-`
-set -g mouse on
+set -g mouse off
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -18,5 +18,7 @@ set -g status-style "none,fg=#a4b1b7"
 set -g window-status-current-style fg=green
 
 set -g status-left-length 100
-set -g status-left "%Y-%m-%d %A %H:%M|"
-set -g status-right "Mem:#(free -m | awk '/Mem/{printf \"%.2f%\", 100*$3/$2}') IP:#(ip addr show eth0 | awk '/inet /{printf $2}')"
+
+set -g status-left "%Y-%m-%d %a %H:%M|"
+set -g status-right "Mem:#(free -m | awk '/Mem/{printf \"%.2f%\", 100*$3/$2}') IP:#(ip addr | grep -v 'scope host lo' | awk '/inet /{printf $2}')"
+
