Nvim: update onedark colorscheme config and 'nvim-cmp' formatting config

--- a/nvim/snippets/package.json
+++ b/nvim/snippets/package.json
@@ -15,12 +15,14 @@
                 "path": "./markdown.json"
             },
             {
-                "language": [
-                    "c",
-                    "cpp"
-                ],
+                "language": [ "c", "cpp" ],
                 "path": "./c.json"
+            },
+            {
+                "language": [ "sh", "zsh" ],
+                "path": "./sh.json"
             }
+
         ]
     }
 }
