Nvim: update golang lspconfig and snippets

--- a/nvim/snippets/package.json
+++ b/nvim/snippets/package.json
@@ -21,8 +21,11 @@
             {
                 "language": [ "sh", "zsh" ],
                 "path": "./sh.json"
+            },
+            {
+                "language": "go",
+                "path": "./go.json"
             }
-
         ]
     }
 }
