--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -8,7 +8,7 @@ set -g pane-base-index 1
 set -g escape-time 10
 set -g focus-events on
 
-set -g default-terminal "tmux-256color"
+# set -g default-terminal "tmux-256color"
 set -g terminal-overrides ',xterm-256color:RGB'
 
 set -g status on
