Zsh: update zshrc and config files

--- a/conf/tmux/tmux.conf
+++ b/conf/tmux/tmux.conf
@@ -1,5 +1,4 @@
-# prefix <Alt-`>
-set -g prefix M-`
+set -g prefix M-` # <Alt-`>
 set -g mouse on
 
 set -g base-index 1
@@ -8,8 +7,7 @@ set -g pane-base-index 1
 set -g escape-time 10
 set -g focus-events on
 
-# set -g default-terminal "tmux-256color"
-set -g terminal-overrides ',xterm-256color:RGB'
+set -g terminal-overrides ",xterm-256color:RGB"
 
 set -g status on
 set -g status-position top
