Nvim: 1. 'lazy.nvim' to 'mini.deps'       2. add 'lspsaga.nvim' and remove 'toggleterm.nvim'

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,6 +17,6 @@ set -g window-status-current-style fg=green
 
 set -g status-left-length 100
 
-set -g status-left "%Y-%m-%d %a %H:%M|"
-set -g status-right "Mem:#(free -m | awk '/Mem/{printf \"%.2f%\", 100*$3/$2}') IP:#(ip addr | grep -v 'scope host lo' | awk '/inet /{printf $2}')"
+# set -g status-left "%Y-%m-%d %a %H:%M|"
+set -g status-right "Mem:#(free -Lm | awk '{printf \"%.2f%\", 100*$6/$8}') IP:#(ip addr | grep -v 'scope host lo' | awk '/inet /{printf $2}')"
 
